fixed the updateDespatchAdvice logic and added a function to get a clientID by username
